--- a/src/assets/styles/components/_profiles.scss
+++ b/src/assets/styles/components/_profiles.scss
@@ -11,8 +11,11 @@
       min-width: 200px;
       border-radius: 25px;
       .card-img{
-        width: 300px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        padding-left: 1.5625rem;
       }
       margin: 3rem;
       box-shadow: 0 19px 38px;
