--- a/src/assets/styles/scenes/_browse.scss
+++ b/src/assets/styles/scenes/_browse.scss
@@ -4,16 +4,23 @@
   text-align: center;
 }
 .explore {
-  background-image: linear-gradient(-60deg, #ff4e00 50%, $black-color 50%);
+  background-image: linear-gradient(-45deg, rgb(0, 0, 0),rgb(0, 0, 0),#b33e0c, #ff4e00);
     display: flex;
     flex-wrap: wrap;
 
-    .card {
+    .explore-cards {
       min-width: 250px;
       max-width: 300px;
       margin: 2rem;
       box-shadow: 0 19px 38px;
       border-radius: 25px;
+      .card-img{
+        width: 250px;
+        height: 250px;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        padding-left: 1.5625rem;
+      }
     }
     .btn-custom-explore {
       margin-left: 4.075rem;
